--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Колесо Фортуны 🎲</title>
-    <link rel="stylesheet" href="C:\Users\User\OneDrive\Рабочий стол\New Tab\project1\static\style.css">
+    <link rel="stylesheet" href="fortune_wheel/static/style.css">
 </head>
 <body>
     <h1>Колесо Фортуны</h1>
@@ -18,6 +18,7 @@
     <button id="spinBtn">Крутить колесо!</button>
     <div id="resultEl"></div>
 
-    <script src="C:\Users\User\OneDrive\Рабочий стол\New Tab\project1\static\script.js"></script>
+    <script src="fortune_wheel/static/script.js"></script>
 </body>
+
 </html>
