--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Колесо Фортуны 🎲</title>
-    <link rel="stylesheet" href="/main/fortune_wheel/static/style.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <h1>Колесо Фортуны</h1>
@@ -18,8 +18,9 @@
     <button id="spinBtn">Крутить колесо!</button>
     <div id="resultEl"></div>
 
-    <script src="/main/fortune_wheel/static/script.js"></script>
+    <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 
 </html>
+
 
